[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UItheme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/Paused.gd" type="Script" id=2]
[ext_resource path="res://assets/Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/UI/Restart.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Play.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Quit.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/BackToMain.gd" type="Script" id=7]

[node name="Paused" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -431.0
margin_bottom = 137.0
text = "Nut Count: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.156863, 1, 0.152941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle2" type="Label" parent="PauseScreen"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.127
anchor_right = 0.5
anchor_bottom = 0.127
margin_left = -693.0
margin_top = -62.16
margin_right = 693.0
margin_bottom = 214.84
custom_fonts/font = ExtResource( 3 )
text = "Paused..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="PauseScreen"]
anchor_left = 0.5
anchor_top = 0.127
anchor_right = 0.5
anchor_bottom = 0.127
margin_left = -693.0
margin_top = -62.16
margin_right = 693.0
margin_bottom = 193.84
custom_fonts/font = ExtResource( 3 )
text = "Paused..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="PauseScreen"]
anchor_left = 0.5
anchor_top = 0.57
anchor_right = 0.5
anchor_bottom = 0.57
margin_left = -340.0
margin_top = -114.6
margin_right = 340.0
margin_bottom = 242.4
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchScene" parent="PauseScreen/Menu" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 680.0
margin_bottom = 102.0
text = "BACK TO MAIN MENU"
script = ExtResource( 7 )
button_scene_path = "res://src/Screens/MainMenu.tscn"

[node name="Retry" parent="PauseScreen/Menu" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 127.0
margin_right = 680.0
margin_bottom = 229.0

[node name="Quit" parent="PauseScreen/Menu" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 254.0
margin_right = 680.0
margin_bottom = 357.0
